# Paramount

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: GetGitCommit.cmake  ParamountConfig.cmake.in  ParamountUtils.cmake
cmake/Checks/: ClangTidy.cmake  CppCheck.cmake  CppLint.cmake
include/pmt/: array_copy.h  for_each_argument.h  string_util.h
src/: main.cc
src/base/: array_copy.h  array_size.h  callback.h  callback_impl.h  callback_types.h  check.h  cmdline_flags.cc  cmdline_flags.h  environment.cc  environment.h  for_each_argument.h  generate_callback_impl.py  integral_types.h  logging.cc  logging.h  macros.h  rw_protected.h  scope_guard.h  status.cc  status.h  string_util.h  unique_copy.h
test/: CMakeLists.txt  paramount_test.cc
test/base/: array_copy_test.cc  array_size_test.cc  callback_test.cc  environment_test.cc  for_each_argument_test.cc  rw_protected_test.cc  scope_guard_test.cc  unique_copy_test.cc
